# SuperREPL

./: .gitignore  Main.lean  README.md  SuperREPL.lean  lake-manifest.json  lakefile.toml  pyproject.toml  requirements.txt
SuperREPL/: Basic.lean  Bridge.lean  BridgeInitializer.lean  CheckLean.lean  Checker.lean  CheckingUtilities.lean  DefaultTools.lean  Environment.lean  GoalStateTools.lean  Test.lean
super_repl/: basic.py  heuristics.py  lean_interface.py  lean_types.py  main.py  memory.py  policy.py  service.py  tests.py
